--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -147,8 +147,8 @@ function signup() {
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="slogan">
-						<h1 class="giant-title">6 - 7 OCTOBER<br>
-							<b>From Data to <font color="#8C1515">Action</font></b></h1>
+						<h1 class="giant-title">
+							From Data to <font color="#8C1515">Action</font><br><b>6 - 7 OCTOBER</b></h1>
 						<p>The Wallace Foundation is pleased to invite you to a two-day convening of grantees<br> and guests on October 6 and 7, 2015, at Stanford University. Hosted by the John W. Gardner Center<br> for Youth and Their Communities, the convening will focus on the strategic use of data to drive improvement and learning in <br>cross-sector community collaboratives. Key issues to be discussed include strategic data use, <br>communications and partnerships.</p>
 					</div>
 					<a class="btn btn-lg btn-default-white goto" href="#content-half-left"><i class="icon icon-mouse"></i> Learn More</a> </div>
@@ -162,7 +162,7 @@ function signup() {
 			<div class="row">
 				<div class="col-lg-4 col-md-5">
 					<h2>14 Cities</h2>
-					<h4 class="sub-title">ASB I & ABS II</h4>
+					<h4 class="sub-title">ASB I & ASB II</h4>
                                         <p>Baltimore, Boston, Chicago, Denver, Fort Worth, Grand Rapids, Jacksonville, Louisville, Nashville, New York City, Providence, Philadelphia, St. Paul, & Washington D.C.</p>
 				</div>
 			</div>
@@ -190,7 +190,7 @@ function signup() {
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h2 class="title">Will Convene for 2 days at:</h2>	
+					<h2 class="title">Will convene for two days at:</h2>	
 					<h3 class="sep-bottom"><i class="icon-pointer"></i> Sheraton Hotel in Palo Alto, CA</h3>				
 					<P>The two-day convening will include presentations and panel discussions with diverse representatives from California collaboratives who will dive deeply into their specific experiences of using data to inform their work. Participants will have an opportunity to apply creative problem solving to real scenarios.</P>
 				</div>
@@ -245,22 +245,27 @@ function signup() {
 <select class="form-control id="contact_hello" name="hello" onChange="contactHello = this.value;">
                                                 <option value="None Selected"selected>Please Select City Team/Group</option>
                                                 <option value="Baltimore">Baltimore</option>
-                                                <option value="Fort Worth">Fort Worth</option>
-                                                <option value="Philadelphia">Philadelphia</option>
-                                                <option value="New York">New York</option>
-                                                <option value="Nashville">Nashville</option>
-                                                <option value="Grand Rapids">Grand Rapids</option>
+                                                <option value="Boston">Boston</option>
                                                 <option value="Chicago">Chicago</option>
                                                 <option value="Denver">Denver</option>
-                                                <option value="Boston">Boston</option>
+                                                <option value="Fort Worth">Fort Worth</option>
+                                                <option value="Grand Rapids">Grand Rapids</option>
+                                                <option value="Jacksonville">Jacksonville</option>
+                                                <option value="Louisville">Louisville</option>
+                                                <option value="Nashville">Nashville</option>
+                                                <option value="New York">New York</option>
+                                                <option value="Philadelphia">Philadelphia</option>
+                                                <option value="Providence">Providence</option>
+                                                <option value="St. Paul">St. Paul</option>
+                                                <option value="Washington D.C.">Washington D.C.</option>
        <option value="Croft and Joftus">Croft and Joftus</option>
        <option value="Collaborative Communications">Collaborative Communications</option>
-       <option value="Weikart">Weikart</option>
+       <option value="National League of Cities">National League of Cities</option>
        <option value="John W. Gardner Center Staff">John W. Gardner Center Staff</option>
        <option value="Forum for Youth Investments">Forum for Youth Investments</option>
        <option value="National Institute for Out-ofSchool Time">National Institute for Out-of-School Time</option>
-       <option value="Wallace Staff">Wallace Staff</option>
-       <option value="Chapin Hall">Chapin Hall</option>
+       <option value="Wallace Foundation">The Wallace Foundation</option>
+       <option value="Chapin Hall">Chapin Hall at the University of Chicago</option>
 
                                             </select>
 
