--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -329,7 +329,7 @@ function signup() {
           </div>
 
           <h5><i class="fa fa-chevron-right"></i> Additional details</h5>
-          <p>A 5-minute walk from the Palo Alto Caltrain station, this modern lodging is also 12 minutes' walk from the Stanford Shopping Center. Amenities include an American restuarant and a lounge, plus a fitness center, a heated outdoor pool and a 24/7 business center.</p>
+          <p>Located across the street from the Stanford campus, and a 5-minute walk from the Palo Alto Caltrain station, this modern lodging is also 12 minutes' walk from the Stanford Shopping Center. Amenities include an American restaurant and a lounge, plus a fitness center, a heated outdoor pool and a 24/7 business center. </p>
 
           <h5><i class="fa fa-chevron-right"></i> Nearby Attractions</h5>
 
