more semantic touch ups

--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -259,10 +259,10 @@ function signup() {
                                                 <option value="St. Paul">St. Paul</option>
                                                 <option value="Washington D.C.">Washington D.C.</option>
        <option value="Croft and Joftus">Croft and Joftus</option>
-       <option value="Collaborative Communications">Collaborative Communications</option>
+       <option value="Collaborative Communications Group">Collaborative Communications Group</option>
        <option value="National League of Cities">National League of Cities</option>
-       <option value="John W. Gardner Center Staff">John W. Gardner Center Staff</option>
-       <option value="Forum for Youth Investments">Forum for Youth Investments</option>
+       <option value="The John W. Gardner Center for Youth">The John W. Gardner Center for Youth</option>
+       <option value="The Forum for Youth Investments">The Forum for Youth Investments</option>
        <option value="National Institute for Out-ofSchool Time">National Institute for Out-of-School Time</option>
        <option value="Wallace Foundation">The Wallace Foundation</option>
        <option value="Chapin Hall">Chapin Hall at the University of Chicago</option>
