--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -258,12 +258,12 @@ function signup() {
                                                 <option value="Providence">Providence</option>
                                                 <option value="St. Paul">St. Paul</option>
                                                 <option value="Washington D.C.">Washington D.C.</option>
-       <option value="Croft and Joftus">Croft and Joftus</option>
+       <option value="Cross and Joftus">Cross and Joftus</option>
        <option value="Collaborative Communications Group">Collaborative Communications Group</option>
        <option value="National League of Cities">National League of Cities</option>
        <option value="The John W. Gardner Center for Youth">The John W. Gardner Center for Youth</option>
-       <option value="The Forum for Youth Investments">The Forum for Youth Investments</option>
-       <option value="National Institute for Out-ofSchool Time">National Institute for Out-of-School Time</option>
+       <option value="The Forum for Youth Investment">The Forum for Youth Investment</option>
+       <option value="National Institute on Out-of-School Time">National Institute on Out-of-School Time</option>
        <option value="Wallace Foundation">The Wallace Foundation</option>
        <option value="Chapin Hall">Chapin Hall at the University of Chicago</option>
 
