Croft to Cross change

--- a/Wallace/Registration/Welcome.html
+++ b/Wallace/Registration/Welcome.html
@@ -176,7 +176,7 @@ function signup() {
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-8 col-md-5 col-md-offset-7">
 					<h2>6 TA Providers</h2>
-					<p>Collaborative Communications Group, Croft & Joftus, John W. Gardner Center for Youth and Their Communitites, National Institute on Out-of-School Time, National League of Cities.
+					<p>Collaborative Communications Group, Cross and Joftus, John W. Gardner Center for Youth and Their Communitites, National Institute on Out-of-School Time, National League of Cities.
  </p><br>
 					<h2>The Wallace<br>Foundation<br><br>Honored Guests</h2>
 				</div>
