--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
-       <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/scope-brown-bag-science-learning-big-data-technology-and-increasing-quality-and-equity-higher" target="_blank"><span id="u1047">EVENTS</span></a></p>
+       <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/sparking-creativity-imagining-tomorrows-schools" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://www.paloaltoonline.com/calendar/event/art-in-action-student-work-exhibit" target="_blank">Art in Action<br>Student Work Exhibit </a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/sparking-creativity-imagining-tomorrows-schools" target="_blank">Sparking Creativity:<br>Imagining America's Schools</a></p>
        <p>&nbsp;</p>
-       <p>DATE: June 2 through August 28&nbsp;</p>
-       <p>LOCATION: East Palo Alto Library</p>
+       <p>DATE: September 25&nbsp;</p>
+       <p>LOCATION: Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
