--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <div id="u1023"><!-- simple frame --></div>
       <div class="clearfix" id="pu1039-5"><!-- column -->
        <div class="Perspectives-Headline-Link clearfix colelem" id="u1039-5"><!-- content -->
-        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveAugust2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
+        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveSeptember2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveAugust2015.pdf" target="_blank">PUTTING EARLY MATH TEACHER PROFESSIONAL DEVELOPMENT<br>INTO THE EQUATION</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveSeptember2015.pdf" target="_blank">PUBLIC SERVICE & COMMUNITY COLLABORATION<br>IN EAST PALO ALTO</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Monika Sanchez & Graciela Borsato</p>
+        <p id="u1040-9">Alexis Wood Trujillo</p>
         <p id="u1040-11"></p>
-        <p><br/>Along with the push to expand access to high-quality preschool, there is a growing national trend promoting alignment across the preschool and early elementary grades to ensure a continuous and coherent set of learning experiences. In our work at the Gardner Center, we have seen efforts first-hand to enhance the quality of education in the early years and support instructional alignment between preschool and elementary school.</p>
+        <p><br/>This summer, I worked with the Gardner Center as the Cardinal Quarter Fellow for the East Palo Alto Youth Arts and Music Center project. I entered my assignment armed with lots of readings, an overview of the Haas Center for Public Service’s Principles of Ethical and Effective Service, and little experience. As the summer progressed, I found that I built accountability and trust through the commitments I made and kept.</p>
        </div>
       </div>
      </div>
@@ -232,10 +232,12 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://news.stanford.edu/news/2015/april/aaas-members-new-042215.html"><span id="u8392-3">Congratulations Milbrey!</span></a></p>
-    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/team/Milbrey.jpg" alt="" width="100" height="126"/></span></span></span>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://news.stanford.edu/news/2015/september/summer-job-benefit-090115.html"><span id="u8392-3">Summer Jobs and Classroom Learning</span></a></p>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/team/Jake.jpg" alt="" width="100" height="126"/></span></span></span>
 
-The American Academy of Arts and Sciences has tapped the Gardner Center’s founding director, Milbrey McLaughlin, for membership in the honorary learned society. Milbrey, an expert in education policy, school-community collaborations, and youth outcomes, joins some of the world’s most accomplished leaders in academia, arts, public affairs, science, and humanities. This honor comes just a week after Milbrey received a Lifetime Achievement award from the American Educational Research Association. 
+A new study finds that a summer job can help boost academic performance in the classroom. "Summer youth employment has the potential to benefit high school students' educational outcomes and employment trajectories, especially for low-income youth," the Gardner Center’s Jake Leos-Urbel wrote with co-authors Amy Ellen Schwartz, Director of the NYU Institute for Education and Social Policy, and Matthew Wiswall, associate professor of economics at Arizona State.
+
+ 
 
  </a></p>
      </div>
