--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="https://ed.stanford.edu/events/sparking-creativity-imagining-tomorrows-schools" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/sparking-creativity-imagining-tomorrows-schools" target="_blank">Sparking Creativity:<br>Imagining America's Schools</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/541/54133" target="_blank">Conversations on Compassion<br>with Anna Deavere Smith</a></p>
        <p>&nbsp;</p>
-       <p>DATE: September 25&nbsp;</p>
-       <p>LOCATION: Stanford</p>
+       <p>DATE: October 7&nbsp;</p>
+       <p>LOCATION: Cemex Auditorium, Stanford</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
