changes to be staged

--- a/about_jgc/content-fellows.html
+++ b/about_jgc/content-fellows.html
@@ -10,63 +10,15 @@
         <span class="content-italic">“The world is an incomparable classroom, and life is a memorable teacher for those who aren't afraid of her.” – John W. Gardner</span>
         <br><br>
 
-        The Gardner Center is proud to foster opportunities for youth and young adults to participate in the fields of youth development and community-based research. This year we are partnering with the <a href="http://sef.org/programs/shinnyo-fellows-program/">Shinnyo-En Foundation</a>, the <a href="https://studentaffairs.stanford.edu/haas/students/postgrad/spin">Haas Center for Public Service</a>, and <a href="http://www.publicallies.org/site/c.liKUL3PNLvF/b.2775815/k.20E5/BE_AN_ALLY.htm">Public Allies</a> to host two post-undergraduate fellows, Sophia Colombari Figueroa and  Cody Young, to collaborate with youth-serving organizations in our near neighbor communities of Redwood City and East Palo Alto, respectively.
+        The Gardner Center is proud to foster opportunities for youth and young adults to participate in the fields of youth development and community-based research. This year we are partnering with the <a href="http://sef.org/programs/shinnyo-fellows-program/">Shinnyo-En Foundation</a> and the <a href="https://studentaffairs.stanford.edu/haas/students/postgrad/spin">Haas Center for Public Service</a> to host a post-undergraduate fellow, Carolina Ornelas, to collaborate with youth-serving organizations in our near neighbor community of Redwood City.
         <br><br>
-        <span class="content-bold">2014-15 FELLOWS</span>
-        <br><br>
-<span class="content-bold">Sophia Colombari Figueroa, Stanford Public Interest Network (SPIN) Shinnyo Fellow</span><br><br>
-<!--photosmall for  200px to 302px width-->
-<table style="borderSpecial thanks to the John and Marcia Goldman Foundation for their support of this community driven process to vision, design and create the Youth Arts & Music Center.: 0px; padding: 10px;">
-<tr>
-<td>
-  <div class="photosmall-left">
-    <!-- change the "#" below to the URL you want a user to go if they click the image-->
-      <img class="photosmall-left" src="/images/team/sophia.jpg" alt="Gardner Center">
-      <br clear=all>
-  </div>
-</td>
-<td>
-<p>
-As a SPIN Shinnyo Fellow, Sophia works with the Gardner Center and <a href="http://www.rwc2020.org/">Redwood City 2020</a>, a collaborative of 8 public and nonprofit organizations that serve children, youth, and families in Redwood City and North Fair Oaks. Sophia’s major role within the collaborative is to scaffold the planning efforts for sustainability and expansion of community schools by conducting research in partnership with stakeholders to inform decision-making. Sophia recently graduated from Stanford University with a Bachelor of Arts degree in Human Biology, concentrating in Community Health and Social Justice. Her prior experience includes working with the Stanford Prevention Research Center, where she was a research assistant for a weight-loss trial in North Fair Oaks and for other community-based projects. She also served as a Community Health Advocacy Fellow at Samaritan House Free Clinic in Redwood City. Sophia is passionate about community-based participatory research as well as cross-sector and interdisciplinary collaboration to address health and social challenges. She is excited to contribute to programs that engage and empower youth and families in Redwood City and North Fair Oaks. Sophia’s dream is to become a primary care provider working with underserved communities to promote individual and public health.
-<br>
-<br>
-For more information about Sophia’s fellowship year, bookmark her blog: <a href="https://stanfordshinnyofellow.wordpress.com/">Reflections of a Stanford Shinnyo Fellow</a>
-</p>
-</td>
-</tr>
-</table>
-<br>
-<br>
-<span class="content-bold">Cody Young, Public Ally</span><br><br>
-<!--photosmall for  200px to 302px width-->
-<table style="border: 0px; padding: 10px;">
-<tr>
-<td>
-  <div class="photosmall-left">
-    <!-- change the "#" below to the URL you want a user to go if they click the image-->
-    <a href="#" class="lightbox" titles="Fellows at the Gardner Center">
-      <img class="photosmall-left" src="/images/team/cody.jpg" alt="Gardner Center">
-    </a>
-  </div>
-</td>
-<td>
-<p>
-Cody Young is the latest addition to the Gardner Center’s East Palo Alto Youth Arts & Music Center team. Her role is to organize, empower, and support a group of youth participants in the creation of the East Palo Alto Youth Art and Music Center. Cody is based in East Palo Alto at <a href="http://www.liveinpeace.org/about/">Live in Peace</a>, a community-based organization which hosts all meetings for the Youth Action Team and provides office space to the Gardner Center as a partner organization. Prior to her Public Allies placement with the Gardner Center, Cody was the Community Project Director for The Social Awareness Network for Activism through Art (SANAA) at UCLA. At SANAA, Cody established and maintained a safe space for South Los Angeles High School students to engage in the process of critical dialogue, critical thinking, and artistic freedom. Cody has also conducted research on how Black male college students express their thoughts about their presence within higher education through music. She is passionate about empowering and valuing the voices of under-represented people in all spaces. She also brings experience in constructing yearly and quarterly funding proposals and grants, working with incarcerated youth, and community engagement. Cody holds two BAs in Anthropology and African American Studies from The University of California, Los Angeles. 
-<br>
-<br>
-For updates from Cody and the Youth Action Team over the course of the 2014-15 year, <a href="mailto:jeremytnguyen@stanford.edu">send an e-mail request</a>
-</p> to join the Youth Art & Music Center mailing list or follow along on <a href="https://www.facebook.com/pages/Youth-Action-Team-for-The-Youth-Arts-and-Music-Center-in-East-Palo-Alto/204332483061251?ref=br_tf">Facebook</a>.
-<br>
-<br>
-<span class="content-italic">Special thanks to the John & Marcia Goldman Foundation for their support of this community-driven process to envision, design, and create the East Palo Alto Youth Arts & Music Center.</span>
-</p>
-</p>
 </td>
 </tr>
 </table>
 <br>
 <br>  
 <span class="content-bold">PAST FELLOWS</span><br><br>
+
 <!---JBB
 <iframe width="560" height="315" src="//www.youtube.com/embed/prGNtHM7Le8?list=UUYtp74jGqSdHJdIh9v61MNQ" frameborder="0" allowfullscreen></iframe>
 -JBB-->
@@ -88,7 +40,7 @@ For updates from Cody and the Youth Action Team over the course of the 2014-15 y
 
 <span class="content-bold">FOR MORE INFORMATION</span>
 <br><br>
-Youth and young adults who are interested in connecting with the Gardner Center should contact Senior Community Engagement Associate <a href="mailto:hofstedt@stanford.edu">Mary Hofstedt</a>.</p>
+Youth and young adults who are interested in connecting with the Gardner Center should contact Associate Director <a href="mailto:jorge@stanford.edu">Jorge Ruiz de Velasco</a>.</p>
 
 
 
