--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -61,7 +61,7 @@
 <li><a href="/our_work/yell/YELL.0712.appendix3.final.pdf">Appendix 3 - Team Builders</a></li>
 </ul>
 <br>
-<p>Please take a moment to let us know who you are and to share your response to this tool. We value your feedback. Please send your comments to Mary Hofstedt at <a href="hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
+<p>If you have any questions regarding the YELL curriculum, please contact Nancy Mancini at <a href="nmancini@stanford.edu">nmancini@stanford.edu</a></p>
   
      </div> <!--end right side box div-->
 </aside>
