fixed home page GSE logo

--- a/about_jgc/team_bios/content-denise.html
+++ b/about_jgc/team_bios/content-denise.html
@@ -13,7 +13,7 @@
 <br>
 <p>Denise came to Stanford in 1997, where she began her career in the Department of Biology as Administrative Assistant to various faculty members. Promoted to Research Administration Process Manager in 2002, Denise made numerous contributions to research administration management and was instrumental in creating many tools to assist staff and improve practices in the department.</p>
 <br>
-<p>Denise has instilled in her five children the importance of family and community. In her role as the Youth Director at her church, she thrives in giving underrepresented youth experiences and opportunities from camping excursions to, more importantly, supporting their goals of attending college. Her passion and expertise complement her position at the John W. Gardener Center for Youth and Their Communities.</p>
+<p>Denise has instilled in her five children the importance of family and community. In her role as the Youth Director at her church, she thrives in giving underrepresented youth experiences and opportunities from camping excursions to, more importantly, supporting their goals of attending college. Her passion and expertise complement her position at the John W. Gardner Center for Youth and Their Communities.</p>
          </div>
 
    
