--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <gcse:searchbox-only></gcse:searchbox-only>
 
 </div>
-     <a class="nonblock nontext clip_frame grpelem" id="u9200" href="https://ed.stanford.edu" target="_blank"><!-- image --><img class="block" id="u9200_img" src="images/school-of-ed-logo.gif" alt="" width="281" height="45"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u9200" href="https://ed.stanford.edu" target="_blank"><!-- image --><img class="block" id="u9200_img" src="images/school-of-ed-logo.png" alt="" width="281" height="45"/></a>
     </div>
     <div class="clearfix colelem" id="ppu1023"><!-- group -->
      <div class="grpelem" id="pu1023"><!-- inclusion -->
