--- a/content-donate.html
+++ b/content-donate.html
@@ -10,11 +10,11 @@
 			<p>You can donate to the Gardner Center in one of the following ways: </p><br>
                         
           <ul class="arrow">
-            <li>Donating with your credit card through Stanford University's <strong>secured</strong> donation website at <strong><a href="https://pgnet.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong>.  Follow these steps to donate with your credit card:<br />
+            <li>Donating with your credit card through Stanford University's <strong>secured</strong> donation website at <strong><a href="https://pgnet.stanford.edu/give/home?mop=CC&gfty=G&pgnTPC=75&stp=34&gdso=5&tgso=6&cturl=close&olc=06494%20" target="_blank">Giving at Stanford</a></strong>.  Follow these steps to donate with your credit card:<br />
 
             <br />
             Click on &quot;Make a Gift&quot; now;<br /><br />
-                <a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank"><img src="/images/make-a-gift.gif" width="139" height="51" align="bottom" /></a><br />
+                <a href="https://pgnet.stanford.edu/give/home?mop=CC&gfty=G&pgnTPC=75&stp=34&gdso=5&tgso=6&cturl=close&olc=06494%20" target="_blank"><img src="/images/make-a-gift.gif" width="139" height="51" align="bottom" /></a><br />
     <br />
        
 	    On the &quot;Direct Your Gift&quot; page, select &quot;School of Education&quot; from top  pull-down menu, then select the appropriate type of gift and payment  method for the other pull-down menus, then click &quot;continue;&quot;<br />
@@ -35,7 +35,7 @@
 	    Please indicate &quot;John W. Gardner Center&quot; on memo line on check.</li>
   	    <br />
 			
-            <li>You can also donate to the Gardner Center through securities transfer by visiting the <strong><a href="https://pgnet22.stanford.edu/give/home?pgnTPC=75&amp;olc=06416&amp;stp=1&amp;cturl=close&amp;gdso=4&amp;pgOrg=ung" target="_blank">Giving at Stanford</a></strong> website and choose securities transfer as method of payment. </li><br>
+            <li>You can also donate to the Gardner Center through securities transfer by visiting the <strong><a href="https://pgnet.stanford.edu/give/home?mop=CC&gfty=G&pgnTPC=75&stp=34&gdso=5&tgso=6&cturl=close&olc=06494%20" target="_blank">Giving at Stanford</a></strong> website and choose securities transfer as method of payment. </li><br>
             <li>Please contact Nancy Mancini at 650.724.0713 or at <a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a>) with any additional questions.
             </li>
  	  </ul>
