event update and other fixes for week

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
      </div>
      <div class="shadow clearfix grpelem" id="u1046"><!-- column -->
       <div class="Events-Headline-Link clearfix colelem" id="u1047-5"><!-- content -->
-       <p id="u1047-3"><a class="nonblock" href="http://edpolicyinca.org/events/exploring-role-social-emotional-learning-student-success" target="_blank"><span id="u1047">EVENTS</span></a></p>
+       <p id="u1047-3"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://edpolicyinca.org/events/exploring-role-social-emotional-learning-student-success" target="_blank">Exploring the Role of<br>Social-Emotional Learning in Student Success</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank">Empathy<br></a></p>
        <p>&nbsp;</p>
-       <p>DATE: November 18&nbsp;</p>
-       <p>LOCATION: Sacramento Public Library</p>
+       <p>DATE: Now through January 26, 2016&nbsp;</p>
+       <p>LOCATION: Cantor Arts Center, Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
