changes for afternoon push - delayed

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -51,6 +51,11 @@
 (650) 724-2810<br>	  
 <p><a href="mailto:mdbiag@stanford.edu">mdbiag@stanford.edu</a></p>
           <br>
+	  <a class="header-link" href="/about_jgc/team_bios/francine.html">Francine Biscocho</a>
+	  <p>Social Science Research Assistant</p>
+(650) 736-6076<br>	  
+<p><a href="mailto:fbiscoch@stanford.edu">fbiscoch@stanford.edu</a></p>
+          <br>
  <a class="header-link" href="http://cs210.stanford.edu/about.html">Jay Borenstein</a>
 	  <p>Technology Developer & Advisor</p>
 (650) 736-8242<br>	  
@@ -94,7 +99,11 @@
 (650) 725-9853<br>	  
 <p><a href="mailto:jcliang@stanford.edu">jcliang@stanford.edu</a></p>
           <br>
- 
+<a class="header-link" href="/about_jgc/team_bios/tie.html">Tie Liang</a>
+	  <p>Policy Analyst</p>
+(650) 721-2971<br>	  
+<p><a href="mailto:tieliang@stanford.edu">tieliang@stanford.edu</a></p>
+          <br>
  		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
 	  <p>Associate Director</p>
 (650) 724-0713<br>
@@ -107,7 +116,6 @@
 <br>
  		<a class="header-link" href="/about_jgc/team_bios/frances.html">Frances Miller</a>
 	  <p>Policy Analyst</p>
-(650) 736-6076<br>
 	  <p><a href="mailto:fkmiller@stanford.edu">fkmiller@stanford.edu</a></p>
           <br>
  </div>
