--- a/about_jgc/team_bios/francine.html
+++ b/about_jgc/team_bios/francine.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-mary.html" -->
+<!--#include virtual="content-francine.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
