--- a/about_jgc/team_bios/tie.html
+++ b/about_jgc/team_bios/tie.html
@@ -21,7 +21,7 @@ document.createElement("article" );
 
 <body>
 <!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-monika.html" -->
+<!--#include virtual="content-tie.html" -->
 <!--#include virtual="/content-footer.html" -->
 <!--#include virtual="/content-analytics.html" -->
 </body>
