--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -6,7 +6,16 @@
       
 
 <h1 class="title-page-header-big">Reports</h1><br>
-<a href="/resources/reports/PlayworksReportMay2015.pdf">The Relationship between Playworks Participation and Student Attendance in Two School Districts</a>
+<a href="/resources/publications/COREDistricts&DeeperLearning.pdf">CORE Districts & Deeper Learning, December 2015</a>
+<br>
+<br>
+<a href="/resources/publications/ArtInActionImplementationStudy_FR.pdf">An Implementation Study of the Art in Action Program, December 2015</a>
+<br>
+<br>
+<a href="/resources/publications/ArtInActionImplementationStudy_ES.pdf">An Implementation Study of the Art in Action Program: Executive Summary, December 2015</a>
+<br>
+<br>
+<a href="/resources/reports/PlayworksReportMay2015.pdf">The Relationship between Playworks Participation and Student Attendance in Two School Districts, May 2015</a>
 <br>
 <br>
 <a href="/resources/reports/OKF_Report_12.12.pdf">Oakland Kids First: Peers Advising Students to Succeed, December 2012</a><br>
