--- a/about_jgc/team_bios/content-tie.html
+++ b/about_jgc/team_bios/content-tie.html
@@ -8,7 +8,7 @@
 	   <br>
 	  <p>
           <img class="bio-std" src="/images/team/Tie.jpg">
-<p>Tie received an EdD degree from University of Massachusetts, Amherst in 2010 with Psychometrics major. Prior to joining the Gardner Center as a policy analyst in August 2015, she worked as a psychometrician at Excelsior College for one year (2009-2010) and then worked as a psychometrician at Education Program for Gifted Youth, Stanford University for five years (2010-2015). The projects she worked on are related to model development in educational testing and learning, evaluation of model fit, equating methods in test scores, item bias effects on test takers, adaptive learning and testing technologies, and statistical analyses on the effects of intervention methods or programs.
+<p>Tie received an EdD degree from University of Massachusetts, Amherst in 2010 with a Psychometrics major. Prior to joining the Gardner Center as a policy analyst in August 2015, she worked as a psychometrician at Excelsior College for one year (2009-2010) and then worked as a psychometrician at Education Program for Gifted Youth, Stanford University for five years (2010-2015). The projects she worked on are related to model development in educational testing and learning, evaluation of model fit, equating methods in test scores, item bias effects on test takers, adaptive learning and testing technologies, and statistical analyses on the effects of intervention methods or programs.
           </p>
 
          </div>
