--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@ To be college- and career-ready, all young people must have access to deeper lea
       <p><a class="nonblock" href="/resources/publications/brochure-12-13-12.pdf"  target="_blank">Click here for PDF version</a></p>
      </div>
      <div class="grpelem" id="u1043"><!-- custom html -->
-      <iframe width="328" height="210" src="https://www.youtube.com/embed/0QakBLcldTQ?list=PLsRNoUx8w3rPvhx_lImJfT7aiQ5tEbxoj" frameborder="0" allowfullscreen></iframe>></iframe>
+       <iframe width="328" height="185" src="https://www.youtube.com/embed/FfK8LaHFSbk" frameborder="0" allowfullscreen></iframe>
 </div>
      <div class="clearfix grpelem" id="u1041-5"><!-- content -->
-      <p><span id="u1041"> Faculty Director Prudence Carter</span>&nbsp;gives a talk about empathy and equity at TEDxStanford 2014.</p>
+      <p><span id="u1041"> Associate Director Jorge Ruiz De Velasco</span>&nbsp;and others introduce the School Quality Improvement Index.</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu7265-4"><!-- group -->
      <div class="clearfix grpelem" id="u7265-4"><!-- content -->
-      <p>Copyright © 2014 John W. Gardner Center at Stanford University. All rights reserved.</p>
+      <p>Copyright © 2016 John W. Gardner Center at Stanford University. All rights reserved.</p>
      </div>
      <a class="nonblock nontext clip_frame grpelem" id="u8369" href="http://www.facebook.com/gardnercenter" target="_blank"><!-- image --><img class="block" id="u8369_img" src="images/facebook-icon.gif" alt="" width="27" height="27"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u8374" href="http://www.twitter.com/gardnercenter" target="_blank"><!-- image --><img class="block" id="u8374_img" src="images/twitter-icon.gif" alt="" width="27" height="27"/></a>
