Leslie home page changes

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank">Empathy<br></a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://cepa.stanford.edu/events/cynthia-coburn" target="_blank">Cynthia Coburn<br></a></p>
        <p>&nbsp;</p>
-       <p>DATE: Now through January 26, 2016&nbsp;</p>
-       <p>LOCATION: Cantor Arts Center, Stanford University</p>
+       <p>DATE: February 25, 2016&nbsp;</p>
+       <p>LOCATION: CERAS Learning Hall, Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
