stages for week

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveDecember2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveDecember2015.pdf" target="_blank">SHIFTING THE NORMS: FROM DATA<br>FOR COMPLIANCE TO DATA FOR STRATEGY</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveFeb2016.pdf" target="_blank">COLLEGE, CAREER, & CIVIC READINESS <br>FOR ALL: A TRI-LEVEL CHALLENGE</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">Amy Gerstein</p>
+        <p id="u1040-9">Jorge Ruiz de Velasco</p>
         <p id="u1040-11"></p>
-        <p><br/>Although the rhetoric of “data-based decision making” has been <i>de rigeur</i> for many years, the Gardner Center team has found that interest in and commitment to data use is not typically reflected in youth-serving organizations’ practices . . . and we think we know why. </p>
+        <p><br/>Two important shifts characterize the current wave of education reform in the U.S. and in California specifically: (1) a growing consensus that college, career, and civic readiness should be the educational goal for all high school graduates, and (2) a trend toward local control or flexibility in implementation to achieve that goal. Taken together, these trends present daunting new challenges for school district leaders. </p>
        </div>
       </div>
      </div>
@@ -208,9 +208,9 @@
        <p id="u1047-3"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://cepa.stanford.edu/events/cynthia-coburn" target="_blank">Cynthia Coburn<br></a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/california-core-districts-becoming-continuous-learning-and-improvement-organizations" target="_blank">Jorge Ruiz de Velasco presents on the California CORE Districts<br></a></p>
        <p>&nbsp;</p>
-       <p>DATE: February 25, 2016&nbsp;</p>
+       <p>DATE: February 22, 2016&nbsp;</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
@@ -219,9 +219,9 @@
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="https://docs.google.com/document/d/1Jt-U5hQszmPoWBjRSgBz-agWt5gqy5o-I3IApd3Fmhs/pub" target="_blank"><span id="u7466-3">#EdResearch4SpringValley</a></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/our_work/ousd.html" target="_blank"><span id="u7466-3">Oakland Community Schools</a></p>
 
-<p id="u8392-8">Following a violent incident against a young female student in Spring Valley, South Carolina, Faculty Director Prudence Carter put out a call to make research more widely known to educators, parents, students, activists, and others as they continue to eradicate disparate treatment in discipline, suspensions, and expulsions. This annotated reading list on authority and the marginalization of youth in schools is the result of the collective effort of many researchers and social scientists around the nation.</p>
+<p id="u8392-8">Amidst Oakland, California’s rich demographic diversity exist considerable disparities in opportunity and outcomes, especially for Oakland’s children. In 2010, Oakland Unified School District launched an initiative to transform all district schools into full service community schools designed to improve the wellbeing of children and families and promote student academic success. A new series of Gardner Center knowledge briefs presents findings from the first year of a three-year study of the city’s community schools. </p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
