--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -64,6 +64,7 @@
 <hr class="short-rule">           <h1 class="content-text-header">O</h1>
 		<ul style="list-style: none;">
 <li><a href="okf.html">Oakland Pass 2 Program Evaluation</a></li>
+<li><a href="ousd.html">Oakland Unified School District Community Schools</a></li>
 		</ul>
 	
 <hr class="short-rule">
