--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -69,6 +69,7 @@
 <h1 class="content-text-header">O</h1>
     <ul style="list-style: none;">
 <li><a href="okf.html">Oakland PASS 2 Program Evaluation</a></li>
+<li><a href="ousd.html">Oakland Unified School District Community Schools</a></li>
 		</ul><br>
 <hr class="short-rule">
 
