--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div id="u1023"><!-- simple frame --></div>
       <div class="clearfix" id="pu1039-5"><!-- column -->
        <div class="Perspectives-Headline-Link clearfix colelem" id="u1039-5"><!-- content -->
-        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveDecember2015.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
+        <p id="u1039-3"><a class="nonblock" href="/resources/publications/GardnerPerspectiveFeb2016.pdf" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
         <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="/resources/publications/GardnerPerspectiveFeb2016.pdf" target="_blank">COLLEGE, CAREER, & CIVIC READINESS <br>FOR ALL: A TRI-LEVEL CHALLENGE</a></p>
@@ -233,7 +233,7 @@
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
     <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/COREDistricts&DeeperLearning.pdf"><span id="u8392-3">CORE & Deeper Learning</span></a></p>
-    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/corethumbnail.jpeg" alt="" width="100" height="126"/></span></span></span>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/OUSDCover.jpg" alt="" width="100" height="126"/></span></span></span>
 
 To be college- and career-ready, all young people must have access to deeper learning opportunities that will prepare them to think critically, work collaboratively, and apply classroom learning to real-world contexts. A new brief examines how California district leaders have collaborated with each other, the Gardner Center, Transforming Education, and other partners to design a school accountability system that ensures equitable access to deeper learning opportunities by focusing on a process of district-led, continuous organizational learning and improvement. 
 
