--- a/index.html
+++ b/index.html
@@ -219,9 +219,11 @@
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/our_work/ousd.html" target="_blank"><span id="u7466-3">Oakland Community Schools</a></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/our_work/ousd.html" target="_blank"><span id="u7466-3">#EdResearch4SpringValley</a></p>
 
-<p id="u8392-8">Amidst Oakland, California’s rich demographic diversity exist considerable disparities in opportunity and outcomes, especially for Oakland’s children. In 2010, Oakland Unified School District launched an initiative to transform all district schools into full service community schools designed to improve the wellbeing of children and families and promote student academic success. A new series of Gardner Center knowledge briefs presents findings from the first year of a three-year study of the city’s community schools. </p>
+<p id="u8392-8">
+Following a violent incident against a young female student in Spring Valley, South Carolina, Faculty Director Prudence Carter put out a call to make research more widely known to educators, parents, students, activists, and others as they continue to eradicate disparate treatment in discipline, suspensions, and expulsions. This annotated reading list on authority and the marginalization of youth in schools is the result of the collective effort of many researchers and social scientists around the nation.
+</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
@@ -232,12 +234,10 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/COREDistricts&DeeperLearning.pdf"><span id="u8392-3">CORE & Deeper Learning</span></a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/COREDistricts&DeeperLearning.pdf"><span id="u8392-3">Oakland Community Schools</span></a></p>
     <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/OUSDCover.jpg" alt="" width="100" height="126"/></span></span></span>
 
-To be college- and career-ready, all young people must have access to deeper learning opportunities that will prepare them to think critically, work collaboratively, and apply classroom learning to real-world contexts. A new brief examines how California district leaders have collaborated with each other, the Gardner Center, Transforming Education, and other partners to design a school accountability system that ensures equitable access to deeper learning opportunities by focusing on a process of district-led, continuous organizational learning and improvement. 
-
- 
+Amidst Oakland, California’s rich demographic diversity exist considerable disparities in opportunity and outcomes, especially for Oakland’s children. In 2010, Oakland Unified School District launched an initiative to transform all district schools into full service community schools designed to improve the wellbeing of children and families and promote student academic success. A new series of Gardner Center knowledge briefs presents findings from the first year of a three-year study of the city’s community schools.
 
  </a></p>
      </div>
