updates to home page

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
        <p id="u1047-3"><a class="nonblock" href="http://events.stanford.edu/events/529/52963/" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://ed.stanford.edu/events/california-core-districts-becoming-continuous-learning-and-improvement-organizations" target="_blank">Jorge Ruiz de Velasco presents on the California CORE Districts<br></a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://edpolicy.stanford.edu/events/1396" target="_blank">Jorge Ruiz de Velasco presents on the California CORE Districts<br></a></p>
        <p>&nbsp;</p>
        <p>DATE: February 22, 2016&nbsp;</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
@@ -234,7 +234,7 @@ Following a violent incident against a young female student in Spring Valley, So
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/resources/publications/COREDistricts&DeeperLearning.pdf"><span id="u8392-3">Oakland Community Schools</span></a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/our_work/ousd.html"><span id="u8392-3">Oakland Community Schools</span></a></p>
     <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="/images/OUSDCover.jpg" alt="" width="100" height="126"/></span></span></span>
 
 Amidst Oakland, California’s rich demographic diversity exist considerable disparities in opportunity and outcomes, especially for Oakland’s children. In 2010, Oakland Unified School District launched an initiative to transform all district schools into full service community schools designed to improve the wellbeing of children and families and promote student academic success. A new series of Gardner Center knowledge briefs presents findings from the first year of a three-year study of the city’s community schools.
@@ -252,7 +252,7 @@ Amidst Oakland, California’s rich demographic diversity exist considerable dis
        <iframe width="328" height="185" src="https://www.youtube.com/embed/FfK8LaHFSbk" frameborder="0" allowfullscreen></iframe>
 </div>
      <div class="clearfix grpelem" id="u1041-5"><!-- content -->
-      <p><span id="u1041"> Associate Director Jorge Ruiz De Velasco</span>&nbsp;and others introduce the School Quality Improvement Index.</p>
+      <p><span id="u1041">Gardner Center researchers</span>&nbsp;and others introduce the School Quality Improvement Index.</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu7265-4"><!-- group -->
